# SCHF_auto_collinear

./: IMPORT_SETUP.md  MANIFEST.in  README.md  install.sh  pyproject.toml  random_basis_arr_121.npy  random_basis_arr_2_2.npy  requirements.txt  set_pythonpath.sh  setup.py  setup_interactive.py  u_v1_v2_v3_filling_1p5_t_4_em4_random_basis_mesh_60.npz
data_analysis/: filling_1_rerun_basis_v1_V2.npz  phase_diagram_filling_0p5_t_4em4_GPU.ipynb  phase_diagram_filling_0p5_t_4em4_GPU_scaling.ipynb  phase_diagram_filling_0p5_t_4em4_GPU_v1_v2.ipynb  phase_diagram_filling_1_t_4em4.ipynb  phase_diagram_filling_1_t_4em4_2_2.ipynb  phase_diagram_filling_1_t_4em4_CPU.ipynb  phase_diagram_filling_1_t_4em4_GPU.ipynb  phase_diagram_filling_1_t_4em4_GPU_pmap.ipynb  phase_diagram_filling_1_t_4em4_GPU_scaling.ipynb  phase_diagram_filling_1_t_4em4_GPU_v1_v2.ipynb  phase_diagram_filling_1_t_4em4_GPU_v1_v2_rerun.ipynb  phase_diagram_filling_1_t_4em4_GPU_v1_v2_scaling.ipynb  phase_diagram_filling_1p5_t_4em4_GPU.ipynb  phase_diagram_filling_1p5_t_4em4_GPU_scaling.ipynb  phase_diagram_filling_1p5_t_4em4_GPU_v1_v2.ipynb  phase_diagram_filling_1p5_t_4em4_GPU_v1_v2_scaling.ipynb  phase_diagram_filling_1p5_t_4em4_GPU_v1_v2_v3.ipynb  phase_diagram_filling_u_0p75_t_4_em4_v1_v2.ipynb  phase_diagram_fixed_u_v_raio_over_filling_t_4_em4_v1_v2.ipynb  phase_diagram_fixed_u_v_raio_over_filling_t_4_em4_v1_v2_v3.ipynb  schf_fixed_u_filling_half_t_4_em4_random_basis_mesh_60_pmap_over_v1_v2.npz  setup_notebook_path.py  u_v1_filling_0p5_t_4_em4_random_basis_mesh_60_gpu.npz  u_v1_filling_1p5_t_4_em4_random_basis_mesh_60_gpu.npz  u_v1_filling_half_t_4_em4_random_basis_mesh_60.npz  u_v1_filling_half_t_4_em4_random_basis_mesh_60_jax_CPU.npz  u_v1_filling_half_t_4_em4_random_basis_mesh_60_pmap.npz  u_v1_v2_filling_0p5_t_4_em4_random_basis_mesh_60_gpu.npz  u_v1_v2_filling_1_t_4_em4_random_basis_mesh_60_gpu.npz  u_v1_v2_filling_1p5_t_4_em4_random_basis_mesh_60_gpu.npz  u_v1_v2_filling_half_t_4_em4_rerun_mesh_60_pmap.npz  u_v1_v2_v3_filling_1p5_t_4_em4_random_basis_mesh_60.npz  u_v1_v2_v3_t_4_em4_random_basis_mesh_60_pmap_over_filling.npz
functions_parameters/: 2_2_uc_irrep_basis_spatial.npy  __init__.py  bond_table_generator.py  filling_0p8_rerun_basis_2_2.npz  jax_schf_helpers.py  jax_schf_kernel.py  phase_plot.py  random_basis_arr.npy  random_basis_arr_121.npy  random_basis_arr_2_2.npy  random_basis_arr_2_2_121.npy  random_basis_arr_2_2_269.npy  random_basis_generator.py  random_basis_generator_2_2.py  (+3 more)
(+83 files in other folders)
